--- a/src/style/diagram.scss
+++ b/src/style/diagram.scss
@@ -45,12 +45,20 @@
   }
 }
 
+.content.middle.center {
+  background-color: #000;
+}
+.react-js-diagrams-canvas {
+  background-color: #000 !important;
+}
+
 .diagram-panel {
   flex: 2;
   display: flex;
   flex-direction: column;
-  background-color: transparent;
   transition:all 500ms ease;
+
+  background-color: #000;
   height: 92vh;
 
   .diagram {
@@ -343,16 +351,27 @@
   border-radius: 10px;
 }
 
-.nodes-panel {
-  flex-direction: column;
-  background-color: transparent;
-  padding: 1.5rem;
+.panel.middle.start.scroll {
+  background-color: #202020;
 
-  .node-wrapper {
-    margin-bottom: 1rem;
+  .nodes-panel-title {
+    text-align: center;
+    font-size: xx-large;
+    padding-top: 2rem;
+  }
 
-    .basic-node {
-      width: 120px;
+  hr {
+    margin: -15px 35px 15px 5px;
+    border-width: 0.5px;
+  }
+
+  .nodes-panel {
+    flex-direction: column;
+    background-color: transparent;
+    padding-left: 25px;
+  
+    .node-wrapper {
+      margin-bottom: 1rem;
     }
   }
 }
@@ -368,80 +387,103 @@
   }
 }
 // Diagram SASS
-.port{
-  width: 15px;
-  height: 15px;
-  background: rgba(white,0.1);
+.port {
+  width: 5px;
+  height: 5px;
+  border: 1px solid rgb(47,69,167) !important;
+  background: rgba(white,1);
   &:hover,&.selected{
     background: rgb(192,255,0);
   }
 }
 
 .basic-node {
-  background-color: rgb(30,30,30);
-  border-radius: 5px;
-  font-family:Arial;
-  color: white;
-  border: solid 2px black;
-  overflow: visible;
-  font-size: 12px;
-  box-shadow: 0 0 10px rgba(black,0.5);
   width: 120px;
-
-  .title{
-    background: rgba(black,0.3);
+  font-family: 'Roboto', sans-serif;
+  color: white;
+  font-size: 12px;
+  margin-bottom: 5px;
+  background-color: transparent !important;
+  .node-header {
     display: flex;
     white-space: nowrap;
-    >*{
+    >* {
       align-self: center;
     }
-
-    .fa{
+    .fa {
       padding: 5px;
       opacity: 0.2;
       cursor: pointer;
 
-      &:hover{
+      &:hover {
         opacity: 1.0;
       }
     }
-
-    .name{
-      flex-grow: 1;
-      padding: 5px 5px;
-      white-space: normal;
-    }
   }
 
-  .ports{
-    display: flex;
-    background-image: linear-gradient(rgba(black,0.1),rgba(black,0.2));
-    padding: 5px;
+  .node-middle{
+    overflow: hidden;
 
-    .in, .out{
-      flex-grow: 1;
-      display: flex;
-      flex-direction: column;
+    .node-icon {
+      float: left;
+      margin: 0px;
+      .icon.RDS {
+        width: 120px;
+        margin-left: -15px;
+        margin-right: -15px;
+      }
+      .icon.EC2 {
+        width: 80px;
+        margin: 10px 5px 10px 5px;
+      }
+      .icon.ELB {
+        width: 80px;
+        margin: 10px 5px 10px 5px;
+      }
     }
 
-    .in-port,.out-port{
+    .node-text {
+      float: left;
+      position: relative;
+      height: 120px;
       display: flex;
-      margin-top: 1px;
-      >*{
+      justify-content: center;
+      align-items: center;
+      input {
+        margin: 0 5px;
+        width: 70px;
+        color: white;
+        background: transparent;
+        border-color: transparent;
+      }
+    }
+
+    .in, .out {
+      float: left;
+      position: relative;
+      height: 120px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .in-port, .out-port {
+      display: flex;
+      >* {
         align-self: center;
       }
-      .name{
-        padding: 0 5px;
-      }
     }
-
-    .out-port{
+    .out-port {
       justify-content: flex-end;
-      .name{
+      .name {
         justify-content: flex-end;
         text-align: right;
       }
     }
+  }
+
+  .node-footer {
+    text-align: center;
+    margin-left: -18px;
   }
 }
 
